[package]
name = "pi-wall-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rust-ini = "0.19"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
toml = "0.4"
rmuxinator = { path = "../../../rmuxinator", version = "0.1.0", optional = true}
